#88 button styling fixed for mobile dark mode

--- a/src/app/styling/about.module.css
+++ b/src/app/styling/about.module.css
@@ -154,6 +154,7 @@
   @media (prefers-color-scheme: dark) {
     .button {
       color: var(--foreground);
+      background-color: #ca5c3d;;
     }
   }
 }
