--- a/src/app/styling/contact_us.module.css
+++ b/src/app/styling/contact_us.module.css
@@ -289,6 +289,7 @@
     }
     .formButton {
       color: var(--foreground);
+      background-color: #ca5c3d;;
     }
   }
 }
