--- a/src/app/styling/faq.module.css
+++ b/src/app/styling/faq.module.css
@@ -173,6 +173,7 @@
     }
     .button {
       color: var(--foreground);
+      background-color: #ca5c3d;;
     }
   }
 }
